myapp/jenkins/jenkins-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
spec:
  selector:
    app: jenkins
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: http
      nodePort: 30080
    - name: jnlp
      port: 50000
      targetPort: jnlp
      nodePort: 30500
